# tiny_python_projects

./: .gitignore  .pre-commit-config.yaml  pyproject.toml
01_hello/: hello.py
02_crowsnest/: crowsnest.py
03_picnic/: picnic.py
