[tool.poetry]
name = "tiny-python-projects"
version = "0.1.0"
description = ""
authors = ["Your Name <you@example.com>"]
readme = "README.md"
packages = [{include = "01_hello"}]

[tool.poetry.dependencies]
python = "^3.10"
black = "^23.1.0"
flake8 = "^6.0.0"
ipython = "^8.11.0"
mypy = "^1.1.1"
pylint = "^2.17.0"
pytest = "^7.2.2"
yapf = "^0.32.0"
pre-commit = "^3.2.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
